made changes in the wrapperclass

--- a/force-app/main/default/classes/wrapperClass.cls
+++ b/force-app/main/default/classes/wrapperClass.cls
@@ -1,5 +1,27 @@
 public with sharing class wrapperClass {
-    public wrapperClass() {
 
+
+
+
+
+
+
+
+
+//Defined the wrapper class
+    public class wrapperClassDemo
+    {
+ // Add Properties or Variables to Hold the Required Data
+       
+    @AuraEnabled public Account accRecord{get;set;}
+    @AuraEnabled public List<Contact> lstContact{get;set;}
+    
+    // Create Constructors to Initialize the Class
+
+        public wrapperClassDemo(Account accRecord ,List<Contact> lstContact) 
+        {
+            this.accRecord=accRecord;
+            this.lstContact=lstContact;
+        }
     }
 }
