added new files

--- a/force-app/main/default/classes/fetchAccountData.cls
+++ b/force-app/main/default/classes/fetchAccountData.cls
@@ -1,6 +1,12 @@
 public with sharing class fetchAccountData {
-    public fetchAccountData() {
-        Account acc = new Account();
-
+    @AuraEnabled(cacheable=true)
+    public static List<Account> getaccContact(){
+        try {
+            List<Account> accList = new List<Account>([Select Id, Name,AccountNumber, Phone,Type , (Select Id, LastName ,FirstName from Contacts) from Account LIMIT 10]);
+            system.debug('the data is here' +accList);
+            return accList;
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
     }
 }
